feat: save current savory canvas validated state
